<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="username">请输入账号</string>
    <string name="pwd">请输入密码</string>
    <string name="app_name">智慧小区</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yijian">意见箱</string>
    <string name="yule_title">娱乐休闲</string>
    <string name="login_text">登 陆</string>
    <string name="regist_text">注 册</string>
    <string name="food_title">美食餐饮</string>
    <string name="gouwu_title">日常购物</string>
    <string name="meishi_title">美食餐饮</string>
    <string name="richang_title">日常购物</string>
    <string name="secondhand_title">二手市场</string>
    <string name="mysecondhand">我的</string>
    <string name="input">发表</string>
    <string name="myorder_title">我的订单</string>
    <string name="address">地址：</string>
    <string name="time">营业时间：</string>
    <string name="phone">电话：</string>
    <string name="qd_order">确定订单</string>
    <string name="yy_phone">预约电话：</string>
    <string name="taocan">【套餐内容】</string>
    <string name="fuhao">￥</string>
    <string name="dingdan">我的订单</string>
    <string name="menu_title">菜单</string>
    <string name="search">搜索</string>
    <string name="taiqiu">台球</string>
    <string name="ktv">KTV</string>
    <string name="meirong">美容SPA</string>
    <string name="jiuba">酒吧</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="bianming">便民服务</string>
    <string name="comment">评 论</string>

</resources>