<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/margin_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/match_45"
            android:layout_marginTop="5dip"
            android:background="@color/white"
            android:hint="@string/username" />

        <View style="@style/match_1" />

        <EditText
            android:id="@+id/pwdEditText"
            style="@style/match_45"
            android:layout_marginBottom="5dip"
            android:background="@color/white"
            android:hint="@string/pwd" />

        <View style="@style/match_1" />
    </LinearLayout>

    <com.example.login.LoginButton
        android:id="@+id/loginButton"
        style="@style/match_45"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="#ec7070"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text" />

    <Button
        android:id="@+id/registButton"
        style="@style/match_45"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="#ec7070"
        android:onClick="registIntent"
        android:text="@string/regist_text"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text" />

</LinearLayout>