<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/blue" >

        <TextView
            android:id="@+id/title"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/food_title"
            android:textColor="#ffffff"
            android:textSize="18dip" />

        <TextView
            android:id="@+id/myOrderTextView"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/dingdan"
            android:textColor="#ffffff"
            android:textSize="18dip" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/shopImageView"
            android:layout_width="70dp"
            android:layout_height="70dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/shopNameTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="dsdad"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shopNameTextView"
                android:layout_marginTop="4dip"
                android:text="@string/address"
                android:textColor="@color/word"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/shopAddressTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shopNameTextView"
                android:layout_marginTop="4dip"
                android:layout_toRightOf="@id/txt_address"
                android:text="wewew"
                android:textColor="@color/word"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="4dip"
                android:text="@string/time"
                android:textColor="@color/word"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/shopTimeTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/txt_time"
                android:text="aadad"
                android:textColor="@color/word"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="15dip" />

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lin3"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:background="@color/blue"
            android:gravity="center" >

            <TextView
                android:id="@+id/menu_title"
                android:layout_width="80dip"
                android:layout_height="25dip"
                android:gravity="center"
                android:text="@string/menu_title"
                android:textColor="@android:color/white"
                android:textSize="20dip" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/menuListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:divider="#f7f8f8"
        android:dividerHeight="3dip"
        android:scrollbarAlwaysDrawVerticalTrack="true" >
    </ListView>

    <LinearLayout
        android:id="@+id/summaryLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@color/blue"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="结算"
            android:textColor="@android:color/white"
            android:textSize="20dip" />
    </LinearLayout>

</LinearLayout>